--- a/src/index.css
+++ b/src/index.css
@@ -14,42 +14,27 @@
   -webkit-text-size-adjust: 100%;
 }
 
-/* ref: https://www.joshwcomeau.com/css/custom-css-reset/ */
-
 /*
-  1. Use a more-intuitive box-sizing model.
+  Styling to clear up the default CSS styles
+  Josh Comeau's Custom CSS Reset
+  https://www.joshwcomeau.com/css/custom-css-reset/
 */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
-/*
-  2. Remove default margin
-*/
 * {
   margin: 0;
 }
-/*
-  3. Allow percentage-based heights in the application
-*/
 html,
-body,
-#root {
+body {
   height: 100%;
 }
-/*
-  Typographic tweaks!
-  4. Add accessible line-height
-  5. Improve text rendering
-*/
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
-/*
-  6. Improve media defaults
-*/
 img,
 picture,
 video,
@@ -58,18 +43,12 @@ svg {
   display: block;
   max-width: 100%;
 }
-/*
-  7. Remove built-in form typography styles
-*/
 input,
 button,
 textarea,
 select {
   font: inherit;
 }
-/*
-  8. Avoid text overflows
-*/
 p,
 h1,
 h2,
@@ -79,10 +58,8 @@ h5,
 h6 {
   overflow-wrap: break-word;
 }
-/*
-  9. Create a root stacking context
-*/
 #root,
 #__next {
   isolation: isolate;
+  height: 100%;
 }
